# arbos-foundry

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  help.html  index.html  rust-toolchain.toml  settings.html  src-files.js
.config/: nextest.toml
anvil/: all.html  constant.CHAIN_ID.html  constant.DEFAULT_GAS_LIMIT.html  constant.VERSION_MESSAGE.html  enum.EthereumHardfork.html  enum.ForkChoice.html  fn.inject_precompiles.html  fn.spawn.html  fn.try_spawn.html  index.html  struct.AccountGenerator.html  struct.NodeConfig.html  struct.NodeHandle.html  trait.PrecompileFactory.html  type.IpcTask.html
anvil_core/: all.html  index.html
anvil_rpc/: all.html  index.html
anvil_server/: all.html  fn.http_router.html  fn.http_ws_router.html  fn.router_inner.html  index.html  struct.PubSubContext.html  struct.ServerConfig.html  trait.PubSubRpcHandler.html  trait.RpcHandler.html
arbos_anvil/: all.html  fn.main.html  index.html  static.ALLOC.html
arbos_cast/: all.html  fn.main.html  index.html  static.ALLOC.html
arbos_chisel/: all.html  fn.main.html  index.html  static.ALLOC.html
arbos_forge/: all.html  fn.main.html  index.html  static.ALLOC.html
arbos_revm/: all.html  index.html  sidebar-items.js
cast/: all.html  fn.explorer_client.html  fn.strip_0x.html  index.html  macro.call_inspectors.html  struct.Cast.html  struct.Env.html  struct.EnvMut.html  struct.EvmEnv.html  struct.SimpleCast.html  trait.InspectorExt.html
chisel/: all.html  index.html
crates/alloy-evm/: Cargo.toml
crates/alloy-evm/src/: either.rs  env.rs  error.rs  evm.rs  lib.rs  overrides.rs  precompiles.rs  spec.rs  traits.rs  tx.rs
crates/alloy-evm/src/block/: error.rs  mod.rs  state_changes.rs
crates/alloy-evm/src/block/system_calls/: eip2935.rs  eip4788.rs  mod.rs
crates/alloy-evm/src/eth/: block.rs  eip6110.rs  mod.rs
crates/arbos-revm/: Cargo.toml
crates/arbos-revm/src/: api.rs  buffer.rs  chain.rs  config.rs  constants.rs  context.rs  evm.rs  handler.rs  inspector.rs  lib.rs  local_context.rs  macros.rs  precompiles.rs  result.rs  spec.rs  stylus.rs  stylus_api.rs  stylus_executor.rs  stylus_state.rs  transaction.rs
crates/arbos-revm/src/api/: builder.rs  default_ctx.rs  exec.rs
crates/arbos-revm/src/precompiles/: arb_address_table.rs  arb_aggregator.rs  arb_debug.rs  arb_gas_info.rs  arb_info.rs  arb_native_token_manager.rs  arb_owner.rs  arb_owner_public.rs  arb_retryable_tx.rs  arb_statistics.rs  arb_sys.rs  arb_wasm.rs  arb_wasm_cache.rs  arbos_wasm.rs  extension.rs  macros.rs  mod.rs
crates/arbos-revm/src/state/: address_table.rs  arbos_state.rs  block_hashes.rs  l1_pricing.rs  l2_pricing.rs  mod.rs  program.rs  retryable.rs  types.rs
forge/: all.html  constant.FOUNDRY_LOCK.html  enum.DepIdentifier.html  index.html  macro.call_inspectors.html  struct.ContractRunner.html  struct.Env.html  struct.EnvMut.html  struct.EvmEnv.html  struct.Lockfile.html  trait.InspectorExt.html  trait.TestFilter.html  type.DepMap.html
forge_doc/: all.html  constant.CONTRACT_INHERITANCE_ID.html  constant.DEPLOYMENTS_ID.html  constant.GIT_SOURCE_ID.html  constant.INFER_INLINE_HYPERLINKS_ID.html  constant.INHERITDOC_ID.html  enum.CommentTag.html  enum.Markdown.html  enum.ParseSource.html  enum.PreprocessorOutput.html  index.html  struct.BufWriter.html  struct.Comment.html  struct.Comments.html  struct.CommentsRef.html  struct.ContractInheritance.html  struct.Deployment.html  struct.Deployments.html  struct.DocBuilder.html  struct.Document.html  struct.GitSource.html  struct.InferInlineHyperlinks.html  struct.Inheritdoc.html  struct.ParseItem.html  struct.Parser.html  struct.PreprocessorId.html  trait.AsDoc.html  trait.Preprocessor.html  type.AsDocResult.html
forge_fmt/: all.html  enum.FormatterError.html  enum.HexUnderscore.html  enum.IndentStyle.html  enum.IntTypes.html  enum.MultilineFuncHeaderStyle.html  enum.NumberUnderscore.html  enum.QuoteStyle.html  enum.SingleLineBlockStyle.html  fn.format.html  fn.format_diagnostics_report.html  fn.format_to.html  fn.offset_to_line_column.html  fn.parse.html  fn.parse2.html  index.html  struct.Comments.html  struct.Formatter.html  struct.FormatterConfig.html  struct.Parsed.html
forge_lint/: all.html  index.html  macro.declare_forge_lint.html  macro.link.html  macro.register_lints.html
forge_script/: all.html  index.html  struct.JsonResult.html  struct.ScriptArgs.html  struct.ScriptConfig.html  struct.ScriptResult.html
forge_script_sequence/: all.html  index.html
forge_sol_macro_gen/: all.html  index.html
forge_verify/: all.html  index.html
foundry_bench/: all.html  constant.RUNS.html  fn.default_benchmark_repos.html  fn.get_benchmark_versions.html  fn.get_forge_version.html  fn.get_forge_version_details.html  fn.setup_benchmark_repos.html  fn.switch_foundry_version.html  index.html  static.BENCHMARK_REPOS.html  static.FOUNDRY_VERSIONS.html  struct.BenchmarkProject.html  struct.RepoConfig.html
foundry_cheatcodes/: all.html  enum.ErrorKind.html  enum.ForgeContext.html  fn.precompile_error.html  fn.set_execution_context.html  index.html  sidebar-items.js  struct.BroadcastableTransaction.html  struct.Cheatcodes.html  struct.CheatsConfig.html  struct.CheatsCtxt.html  struct.Error.html  struct.Wallets.html  struct.WalletsInner.html  trait.Cheatcode.html  trait.CheatcodeDef.html  trait.CheatcodesExecutor.html  trait.DynCheatcode.html  type.BroadcastableTransactions.html  type.ExpectedCallTracker.html  type.Result.html
foundry_cheatcodes_spec/: all.html  enum.Group.html  enum.Mutability.html  enum.Safety.html  enum.Status.html  enum.Visibility.html  index.html  struct.Cheatcode.html  struct.Cheatcodes.html  struct.Enum.html  struct.EnumVariant.html  struct.Error.html  struct.Event.html  struct.Function.html  struct.Struct.html  struct.StructField.html  trait.CheatcodeDef.html
foundry_cli/: all.html  index.html
foundry_common/: all.html  fn.block_on.html  fn.block_on_handle.html  fn.erc7201.html  index.html  (+9 more)
testdata/fixtures/Stylus/crates/program/: Cargo.toml
testdata/fixtures/Stylus/crates/program/src/: lib.rs  main.rs
(+27351 files in other folders)
