[package]
name = "alloy-evm"
description = "Simplified parts of alloy-evm for use in other crates"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm = { workspace = true, default-features = false, features = ["serde", "optional_eip3541"]}
serde = {  workspace = true, optional = true }
auto_impl = { workspace = true}
alloy-rlp = { workspace = true }
alloy-rpc-types = { workspace = true }
thiserror = { workspace = true }



[dev-dependencies]
serde_json = { version = "1.0", default-features = false }

[features]
overrides = []
call-util = ["overrides"]