[package]
name = "arbos-revm"
description = "Arbitrum variant of Revm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
revm = { workspace = true, default-features = false, features = ["serde", "optional_eip3541"]}
serde = {  workspace = true, optional = true }
once_cell = { version = "1.21" }
arbutil = { workspace =  true, default-features = false }
stylus = { workspace = true, default-features = false, features = ["cc_brotli"] }
wasmer-types = { workspace = true, default-features = false }

lru = "0.14.0"
lazy_static = "1.5.0"

[dev-dependencies]
serde_json = { version = "1.0", default-features = false }

[features]
serde = ["dep:serde"]