[package]
name = "foundry-stylus-program"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "1.0.1", default-features = false }
alloy-sol-types = { version = "1.0.1", default-features = false }
stylus-sdk = "0.10.0-beta.1"
hex = { version = "0.4", default-features = false }

[dev-dependencies]
alloy-primitives = { version = "1.0.1", features = ["sha3-keccak"] }
tokio = { version = "1.12.0", features = ["full"] }
ethers = "2.0"
eyre = "0.6.8"
stylus-sdk = { version = "0.10.0-beta.1", features = ["stylus-test"] }
dotenv = "0.15.0"

[lib]
crate-type = ["lib", "cdylib"]

[features]
reentrant = ["stylus-sdk/reentrant"]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]